--- a/src/PartsUnlimitedWebsite/Views/Home/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @using PartsUnlimited
 
 @{
-    ViewBag.Title = "Bernhards Home Page";
+    ViewBag.Title = "B2 Dev Home Page";
 }
 
 @section scripts {
